--- a/less/base/_default.less
+++ b/less/base/_default.less
@@ -1,9 +1,8 @@
 //remove attribute
-body{
+*{
     margin: 0;
     padding: 0;
     font-family: 'Poppins';
-    box-sizing: border-box;
 }
 a{
     color: @color-font;
