--- a/less/base/_header.less
+++ b/less/base/_header.less
@@ -103,7 +103,7 @@
                             font-size: 40px;
                             font-family: 'Poppins';
                             font-weight: 500;
-                            margin-top: -70px;
+                            margin-top: -8px;
                         }
                     }
                     .banner-description
@@ -115,13 +115,13 @@
                             font-size: 14px;
                             max-width: 525px;
                             width: 100%;
-                            margin-top: -20px;   
+                            margin-top: 19px;   
                             margin-left: 2px;  
                     }
                     .banner-button
                     {
                             margin-top: 66px;
-                            margin-left: 2px;
+                            margin-left: 3px;
                             width:170px;
                             height: 50px;
                             border: 1px solid @color-font;
@@ -199,7 +199,7 @@
                         font-family: 'Poppins';
                         font-weight: 500;
                         text-align: center;
-                        padding-top: 4px;
+                        padding-top: 25px;
                         text-transform: uppercase;
                     }
                     .description{
@@ -207,6 +207,7 @@
                         font-family: 'Poppins';
                         font-weight:300 ;
                         font-size: 14px;
+                        padding-top: 14px;
                         font-style: normal;
                         width: 289px;
                         text-align: center;
@@ -275,7 +276,7 @@
         .product-detail-cover
         {
             width: 25%;
-            margin-bottom: 20px;
+            margin-bottom: 37px;
             .product-detail-boder
             {   
                 margin: 0 15px;
@@ -347,7 +348,7 @@
                         font-family: 'Poppins';
                         font-weight: 500;
                         font-size: 14px;
-                        margin-top: -10px;
+                        margin-top: 3px;
                         
                     }
                 }
@@ -376,7 +377,7 @@
 //comment
 .comment
 {   
-    margin-top: 26px;
+    margin-top: 23px;
     margin-bottom: 95px;
     .comment-inner
     {
@@ -387,6 +388,7 @@
             font-size: 36px;
             font-weight: 500;
             letter-spacing: 0px;
+            letter-spacing: -0.18px;
         }
         .comment-avatar
         {   
@@ -413,6 +415,7 @@
                 font-weight: 300;
                 line-height: 30px;
                 display: none;
+                
             }
             .active
             {
@@ -425,7 +428,7 @@
              font-size: 18px;
              font-family: 'Poppins';
              font-weight: 500;
-             margin-top: 27px;
+             margin-top: 25px;
              text-transform: uppercase;
         }
         .feel
@@ -434,7 +437,7 @@
             font-size: 14px;
             font-family: 'Poppins';
             font-weight: 300;
-            margin-top: 7px;
+            margin-top: 8px;
         }
         .tab
         {   
