--- a/less/base/_responsive.less
+++ b/less/base/_responsive.less
@@ -362,7 +362,7 @@
         width: 100%;
         .cover
         {
-            height: 184vh;
+            height: 670px;
             width: 100vw;
             position: absolute;
             top: 75px;
@@ -424,7 +424,7 @@
                                     background-color:dimgray ;
                                     max-width: 300px;
                                     width: 100%;
-                                    height: 184vh;
+                                    height: 670px;
                                     border-bottom-right-radius: 7px;
                                     &-item
                                     {
@@ -808,7 +808,7 @@
         .cover
         {
             top:84px;
-            height: 181vh;
+            height: 660px;
         }
         .banner-background
         {   
@@ -839,7 +839,7 @@
                                 }
                                 .menu{
                                     top:84px;
-                                    height: 181vh;
+                                    height: 660px;
                                     &-item
                                     {
                                        
@@ -1157,8 +1157,8 @@
         {
             position: absolute;
             top: 85px;
-            height: 181vh;
-          
+            height: 660px;
+    
         }
         .banner-background
         {   
