--- a/css/style.css
+++ b/css/style.css
@@ -588,7 +588,7 @@ footer .footer-main .footer-end-inner .footer-item ul .link-item a:hover {
     width: 100%;
   }
   .wrapper .cover {
-    height: 184vh;
+    height: 670px;
     width: 100vw;
     position: absolute;
     top: 75px;
@@ -636,7 +636,7 @@ footer .footer-main .footer-end-inner .footer-item ul .link-item a:hover {
     background-color: dimgray ;
     max-width: 300px;
     width: 100%;
-    height: 184vh;
+    height: 670px;
     border-bottom-right-radius: 7px;
   }
   .wrapper .banner-background .header-top-inner .logo-menu .navbar .menu-item {
@@ -805,7 +805,7 @@ footer .footer-main .footer-end-inner .footer-item ul .link-item a:hover {
 @media all and (max-width: 768px) {
   .wrapper .cover {
     top: 84px;
-    height: 181vh;
+    height: 660px;
   }
   .wrapper .banner-background .logo-moblie {
     height: 20px;
@@ -818,7 +818,7 @@ footer .footer-main .footer-end-inner .footer-item ul .link-item a:hover {
   }
   .wrapper .banner-background .header-top-inner .logo-menu .navbar .menu {
     top: 84px;
-    height: 181vh;
+    height: 660px;
   }
   .wrapper .strength .container .strength-inner .strength-col .content .description {
     max-width: 289px;
@@ -845,7 +845,7 @@ footer .footer-main .footer-end-inner .footer-item ul .link-item a:hover {
   .wrapper .cover {
     position: absolute;
     top: 85px;
-    height: 181vh;
+    height: 660px;
   }
   .wrapper .banner-background .logo-moblie {
     height: 20px;
