--- a/less/base/_default.less
+++ b/less/base/_default.less
@@ -27,7 +27,7 @@ input{
 // grid layout
 .container
 {
-    max-width: 1170px;
+    max-width: 1200px;
     width: 100%;
     padding: 0 15px;
     margin: auto;
@@ -38,4 +38,9 @@ input{
     display: flex;
     flex-wrap: wrap;
     margin: 0 -15px;
+}
+col
+{
+    margin: 0 15px;
+    box-sizing: border-box;
 }
