--- a/less/base/_responsive.less
+++ b/less/base/_responsive.less
@@ -128,7 +128,7 @@
                         
                             .logo{
                                 margin-right: 30px;
-                                margin-left: 0;
+                                margin-left: 15px;
                             }
                             .navbar
                             {
@@ -152,9 +152,10 @@
                         }
                         .form-control
                         {
+                           
                             .control-item
                             {
-                            
+                                padding: 0 15px;
                                 &:last-child
                                 {
                                 
@@ -172,7 +173,7 @@
                 {
                     .banner-inner
                     {
-                    
+                        padding-left: 15px;
                         .introduce-inner
                         {
                             
@@ -208,6 +209,57 @@
                     
                     }
                 }
+            }
+        }
+        .strength
+        {
+           
+            margin: 0 15px;
+            .container
+            {
+                    .strength-inner
+                {
+
+                    .strength-col
+                    {   
+                        
+                        .strength-item
+                        {
+                      
+                            
+                        }
+                        .content
+                        {
+                           
+                            img
+                            {
+                        
+                            }
+                            .title
+                            {
+                            
+                            }
+                            .description{
+                            
+                            }
+                        }
+                            #strength
+                            {
+                            
+                                
+                            }
+                            #dumbbells
+                            {
+                            
+                            }
+                            #power{
+                            
+                            }
+                    }
+                
+                
+                    
+                }   
             }
         }
         .product
