--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ input {
   padding: 0;
 }
 .container {
-  max-width: 1170px;
+  max-width: 1200px;
   width: 100%;
   padding: 0 15px;
   margin: auto;
@@ -56,12 +56,16 @@ input {
   flex-wrap: wrap;
   margin: 0 -15px;
 }
+col {
+  margin: 0 15px;
+  box-sizing: border-box;
+}
 .banner-background {
   background-image: url(../img/header-bg.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-color: #070303;
-  height: 945px;
+  height: 950px;
 }
 .banner-background .logo-moblie {
   height: auto;
@@ -74,18 +78,18 @@ input {
   justify-content: space-between;
   align-items: center;
   height: 100px;
-  margin: 0 -15px;
+  margin: 0;
 }
 .banner-background .header-top-inner .logo-menu {
   display: flex;
   height: 54px;
 }
 .banner-background .header-top-inner .logo-menu .logo {
-  margin-right: 60px;
+  margin-right: 64px;
 }
 .banner-background .header-top-inner .logo-menu .navbar {
   display: flex;
-  align-items: center;
+  margin-top: 2px;
 }
 .banner-background .header-top-inner .logo-menu .navbar .nav-icon {
   color: #ffffff;
@@ -109,13 +113,12 @@ input {
   color: white;
   justify-content: center;
   align-items: center;
-  margin-right: 2px;
 }
 .banner-background .header-top-inner .form-control .control-item {
-  padding: 0 27px;
+  padding: 0 26px;
   font-size: 16px;
   border-right: 1px solid #777777;
-  height: 18px;
+  height: 17px;
 }
 .banner-background .header-top-inner .form-control .control-item:last-child {
   padding-right: 0px;
@@ -128,18 +131,17 @@ input {
 .banner-background .banner-introduce .container {
   position: relative;
 }
-.banner-background .banner-introduce .container .banner-inner {
-  margin-left: -22px;
-}
 .banner-background .banner-introduce .container .banner-inner .introduce-inner .banner-title .banner-title-big {
   font-size: 60px;
   font-family: 'Poppins';
   font-weight: 500;
+  margin: 0 -2px;
 }
 .banner-background .banner-introduce .container .banner-inner .introduce-inner .banner-title .banner-title-small {
   font-size: 40px;
   font-family: 'Poppins';
   font-weight: 500;
+  margin: 0 -2px;
   margin-top: -8px;
 }
 .banner-background .banner-introduce .container .banner-inner .introduce-inner .banner-description {
@@ -151,13 +153,11 @@ input {
   max-width: 525px;
   width: 100%;
   margin-top: 19px;
-  margin-left: 2px;
 }
 .banner-background .banner-introduce .container .banner-inner .introduce-inner .banner-button {
   margin-top: 66px;
-  margin-left: 3px;
-  width: 170px;
-  height: 50px;
+  width: 169px;
+  height: 49px;
   border: 1px solid #ffffff;
   display: block;
 }
@@ -173,12 +173,12 @@ input {
 }
 .banner-background .banner-introduce .container .banner-inner .banner-layer {
   position: absolute;
-  right: -17px;
-  top: -105px;
+  right: -10px;
+  top: -101px;
 }
 .strength {
   position: relative;
-  top: -73px;
+  top: -77px;
 }
 .strength .container .strength-inner {
   display: flex;
@@ -244,10 +244,7 @@ input {
   background-image: url(../img/strength-2.png);
 }
 .product {
-  margin-top: 22px;
-}
-.product .tab-inner {
-  margin: 0 -19px;
+  margin-top: 20px;
 }
 .product .tab-inner .tab {
   display: flex;
@@ -257,7 +254,7 @@ input {
   font-size: 18px;
   font-family: 'Poppins';
   font-weight: 500;
-  padding: 0px 18px;
+  padding: 0px 17.5px;
   border-bottom: 1px solid #948989;
   text-transform: uppercase;
 }
@@ -274,7 +271,7 @@ input {
 .product .product-inner {
   display: none;
   flex-wrap: wrap;
-  margin: 30px -15px;
+  margin: 30px 0px;
 }
 .product .product-inner .product-detail-cover {
   width: 25%;
@@ -317,7 +314,6 @@ input {
   border: 1px solid gainsboro;
   border-top-left-radius: 7px;
   border-bottom-right-radius: 7px;
-  background-color: #ffff;
 }
 .product .product-inner .product-detail-cover .product-detail-boder .product-image .action-item:hover i {
   color: #fff;
@@ -329,7 +325,7 @@ input {
 }
 .product .product-inner .product-detail-cover .product-detail-boder .product-price {
   margin-top: 44px;
-  margin-left: 26px;
+  margin-left: 29px;
   padding-bottom: 30px;
 }
 .product .product-inner .product-detail-cover .product-detail-boder .product-price .product-name {
@@ -370,7 +366,7 @@ input {
   margin-left: auto;
   margin-right: auto;
   margin-top: 45px;
-  margin-bottom: 22px;
+  margin-bottom: 21px;
   background-image: url('../img/avatar-circle.png');
   background-repeat: no-repeat;
   background-position-x: -58px;
@@ -381,14 +377,15 @@ input {
 }
 .comment .comment-inner .comment-detail {
   margin: 0 auto;
-  width: 775px;
+  max-width: 775px;
+  width: 100%;
 }
 .comment .comment-inner .comment-detail .rate {
   text-align: center;
   font-size: 18px;
   font-family: 'Poppins';
   font-weight: 300;
-  line-height: 30px;
+  line-height: 29px;
   display: none;
 }
 .comment .comment-inner .comment-detail .active {
@@ -399,7 +396,7 @@ input {
   font-size: 18px;
   font-family: 'Poppins';
   font-weight: 500;
-  margin-top: 25px;
+  margin-top: 27px;
   text-transform: uppercase;
 }
 .comment .comment-inner .feel {
@@ -427,13 +424,9 @@ input {
 }
 #line {
   margin-top: 98px;
-  margin-left: -15px;
-  margin-right: -15px;
-}
-.list-logo {
-  margin: 0 5px;
 }
 .list-logo .list-logo-inner {
+  margin: 0 22px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -454,7 +447,8 @@ footer .footer-main .footer-head-inner .logo img {
   margin: 0 auto;
 }
 footer .footer-main .footer-head-inner .description {
-  width: 715px;
+  max-width: 715px;
+  width: 100%;
   font-family: 'Poppins';
   font-weight: 300;
   font-size: 14px;
@@ -463,7 +457,6 @@ footer .footer-main .footer-head-inner .description {
   text-align: center;
   margin: 0 auto;
   margin-top: 33px;
-  letter-spacing: 0px;
 }
 footer .footer-main .footer-head-inner .icon-social {
   margin-top: 40px;
@@ -483,8 +476,6 @@ footer .footer-main #l {
 }
 footer .footer-main .footer-end-inner {
   margin-top: 71px;
-  margin-left: -15px;
-  margin-right: -15px;
 }
 footer .footer-main .footer-end-inner .footer-item {
   max-width: 300px;
@@ -551,7 +542,7 @@ footer .footer-main .footer-end-inner .footer-item ul .link-item a:hover {
   }
   .wrapper .banner-background .header-top-inner .logo-menu .logo {
     margin-right: 30px;
-    margin-left: 0;
+    margin-left: 15px;
   }
   .wrapper .banner-background .header-top-inner .logo-menu .navbar .nav-icon {
     display: none;
@@ -561,10 +552,19 @@ footer .footer-main .footer-end-inner .footer-item ul .link-item a:hover {
     color: #ffffff;
     padding: 0 5px;
   }
+  .wrapper .banner-background .header-top-inner .form-control .control-item {
+    padding: 0 15px;
+  }
+  .wrapper .banner-background .banner-introduce .container .banner-inner {
+    padding-left: 15px;
+  }
   .wrapper .banner-background .banner-introduce .container .banner-inner .banner-layer {
     position: absolute;
     right: 0px;
     top: -105px;
+  }
+  .wrapper .strength {
+    margin: 0 15px;
   }
   .wrapper .product .tab-inner {
     margin: 0;
