--- a/less/base/_footer.less
+++ b/less/base/_footer.less
@@ -17,7 +17,8 @@ footer
             }
             .description
             {
-                width: 715px;
+                max-width: 715px;
+                width: 100%;
                 font-family: 'Poppins';
                 font-weight: 300;
                 font-size: 14px;
@@ -26,7 +27,6 @@ footer
                 text-align: center;
                 margin: 0 auto;
                 margin-top: 33px;
-                letter-spacing: 0px;
             }
             .icon-social
             {
@@ -51,8 +51,6 @@ footer
         .footer-end-inner
         {
             margin-top: 71px;
-            margin-left: -15px;
-            margin-right: -15px;
             .footer-item
             {
                 max-width: 300px;
