--- a/less/base/_default.less
+++ b/less/base/_default.less
@@ -39,8 +39,8 @@ input{
     flex-wrap: wrap;
     margin: 0 -15px;
 }
-col
+.col
 {
-    margin: 0 15px;
+    padding: 0 15px;
     box-sizing: border-box;
 }
