--- a/less/base/_footer.less
+++ b/less/base/_footer.less
@@ -33,16 +33,18 @@ footer
                 margin-top: 40px;
                 .icon-inner
                 {   
-                    width: 252px;
+                    width: 209px;
                     margin: 0 auto;
                     display: flex;
-                    justify-content: space-around;
+                    justify-content: space-between;
+                    align-items: center;
+
                     
                 }
             }
         }
         #l
-        {   margin: 0px -15px;
+        { 
             height: 1px;
             margin-top: 53px;
             background-color: #948989;
@@ -53,33 +55,35 @@ footer
             margin-top: 71px;
             .footer-item
             {
-                max-width: 300px;
-                width: 100%;
+                
+                width: 25%;
                 p{
                     font-size: 18px;
                     font-family: 'Poppins';
                     font-weight: 500;
                     color: white;
                     text-transform: uppercase;
-                    margin-left: 12px;
+                    cursor: pointer;
                 }
                 ul
                 {
-                    padding-top: 27px;
+                    padding-top: 26px;
                     .link-item
                     {
                         margin-bottom: 16px;
                         i{ 
                             color: #5e5e5e;
                             width: 12px;
-                            margin-left: 12px;
+                            margin-right: 15px;
+                            font-size: 14px;
+                            box-sizing: border-box;
                         }
                         a{
                             color: #5e5e5e;
                             font-size: 14px;
                             font-family: 'Poppins';
                             font-weight: 300;
-                            margin-left: 12px;
+                           
                             &:hover
                             {
                                 color: burlywood;
