--- a/css/style.css
+++ b/css/style.css
@@ -56,8 +56,8 @@ input {
   flex-wrap: wrap;
   margin: 0 -15px;
 }
-col {
-  margin: 0 15px;
+.col {
+  padding: 0 15px;
   box-sizing: border-box;
 }
 .banner-background {
@@ -462,13 +462,13 @@ footer .footer-main .footer-head-inner .icon-social {
   margin-top: 40px;
 }
 footer .footer-main .footer-head-inner .icon-social .icon-inner {
-  width: 252px;
+  width: 209px;
   margin: 0 auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  align-items: center;
 }
 footer .footer-main #l {
-  margin: 0px -15px;
   height: 1px;
   margin-top: 53px;
   background-color: #948989;
@@ -478,8 +478,7 @@ footer .footer-main .footer-end-inner {
   margin-top: 71px;
 }
 footer .footer-main .footer-end-inner .footer-item {
-  max-width: 300px;
-  width: 100%;
+  width: 25%;
 }
 footer .footer-main .footer-end-inner .footer-item p {
   font-size: 18px;
@@ -487,10 +486,10 @@ footer .footer-main .footer-end-inner .footer-item p {
   font-weight: 500;
   color: white;
   text-transform: uppercase;
-  margin-left: 12px;
+  cursor: pointer;
 }
 footer .footer-main .footer-end-inner .footer-item ul {
-  padding-top: 27px;
+  padding-top: 26px;
 }
 footer .footer-main .footer-end-inner .footer-item ul .link-item {
   margin-bottom: 16px;
@@ -498,14 +497,15 @@ footer .footer-main .footer-end-inner .footer-item ul .link-item {
 footer .footer-main .footer-end-inner .footer-item ul .link-item i {
   color: #5e5e5e;
   width: 12px;
-  margin-left: 12px;
+  margin-right: 15px;
+  font-size: 14px;
+  box-sizing: border-box;
 }
 footer .footer-main .footer-end-inner .footer-item ul .link-item a {
   color: #5e5e5e;
   font-size: 14px;
   font-family: 'Poppins';
   font-weight: 300;
-  margin-left: 12px;
 }
 footer .footer-main .footer-end-inner .footer-item ul .link-item a:hover {
   color: burlywood;
@@ -540,10 +540,6 @@ footer .footer-main .footer-end-inner .footer-item ul .link-item a:hover {
   .wrapper .banner-background .logo-moblie {
     display: none;
   }
-  .wrapper .banner-background .header-top-inner .logo-menu .logo {
-    margin-right: 30px;
-    margin-left: 15px;
-  }
   .wrapper .banner-background .header-top-inner .logo-menu .navbar .nav-icon {
     display: none;
   }
@@ -552,19 +548,10 @@ footer .footer-main .footer-end-inner .footer-item ul .link-item a:hover {
     color: #ffffff;
     padding: 0 5px;
   }
-  .wrapper .banner-background .header-top-inner .form-control .control-item {
-    padding: 0 15px;
-  }
-  .wrapper .banner-background .banner-introduce .container .banner-inner {
-    padding-left: 15px;
-  }
   .wrapper .banner-background .banner-introduce .container .banner-inner .banner-layer {
     position: absolute;
     right: 0px;
     top: -105px;
-  }
-  .wrapper .strength {
-    margin: 0 15px;
   }
   .wrapper .product .tab-inner {
     margin: 0;
@@ -623,9 +610,8 @@ footer .footer-main .footer-end-inner .footer-item ul .link-item a:hover {
   }
   .wrapper .banner-background .header-top-inner .logo-menu .navbar .nav-icon {
     display: block;
-    padding-left: 15px;
-    padding-top: 7px;
-    font-size: 23px;
+    padding-top: 15px;
+    font-size: 20px;
     cursor: pointer;
   }
   .wrapper .banner-background .header-top-inner .logo-menu .navbar .menu {
@@ -651,14 +637,15 @@ footer .footer-main .footer-end-inner .footer-item ul .link-item a:hover {
   }
   .wrapper .banner-background .header-top-inner .form-control .control-item {
     border: none;
-    padding: 0 15px;
-    font-size: 15px;
+    font-size: 17px;
+    padding: 0 13px;
+    margin-top: 0px;
+  }
+  .wrapper .banner-background .header-top-inner .form-control .control-item:last-child {
+    padding-right: 0;
   }
   .wrapper .banner-background .banner-introduce {
     margin-top: 140px;
-  }
-  .wrapper .banner-background .banner-introduce .container .banner-inner {
-    padding-left: 15px;
   }
   .wrapper .banner-background .banner-introduce .container .banner-inner .introduce-inner {
     z-index: 3;
@@ -680,7 +667,6 @@ footer .footer-main .footer-end-inner .footer-item ul .link-item a:hover {
   .wrapper .strength {
     position: relative;
     top: 15px;
-    margin: 0 15px;
   }
   .wrapper .strength .container .strength-inner .strength-col {
     width: 100%;
@@ -706,7 +692,6 @@ footer .footer-main .footer-end-inner .footer-item ul .link-item a:hover {
     justify-content: center;
   }
   .wrapper .product .tab-inner .tab-child {
-    border-bottom: none;
     border-bottom: 1px solid #948989;
   }
   .wrapper .product .tab-inner .tab .line {
@@ -854,16 +839,16 @@ footer .footer-main .footer-end-inner .footer-item ul .link-item a:hover {
     height: 35px;
   }
   .wrapper .banner-background .header-top-inner .logo-menu .navbar .nav-icon {
-    font-size: 20px;
+    font-size: 17px;
+  }
+  .wrapper .banner-background .header-top-inner .logo-menu .navbar .menu {
+    top: 85px;
   }
   .wrapper .banner-background .header-top-inner .form-control .control-item {
-    margin: 0;
-    margin-left: 10px;
-    padding: 0;
-    border: none;
+    margin-top: 0;
   }
   .wrapper .banner-background .header-top-inner .form-control .control-item i {
-    margin: 5px 5px;
+    font-size: 15px;
   }
   .wrapper .banner-background .banner-introduce .container .banner-inner .introduce-inner .banner-title .banner-title-big {
     font-size: 30px;
