--- a/less/base/_responsive.less
+++ b/less/base/_responsive.less
@@ -127,8 +127,7 @@
                         {
                         
                             .logo{
-                                margin-right: 30px;
-                                margin-left: 15px;
+                               
                             }
                             .navbar
                             {
@@ -155,7 +154,7 @@
                            
                             .control-item
                             {
-                                padding: 0 15px;
+                                
                                 &:last-child
                                 {
                                 
@@ -173,7 +172,6 @@
                 {
                     .banner-inner
                     {
-                        padding-left: 15px;
                         .introduce-inner
                         {
                             
@@ -213,8 +211,6 @@
         }
         .strength
         {
-           
-            margin: 0 15px;
             .container
             {
                     .strength-inner
@@ -452,19 +448,16 @@
                         height: 50px;
                         .logo-menu
                         {
-                        
                             .logo{
                                display: none;
                             }   
                             .navbar
                             {
-                            
                                 .nav-icon
                                 {
                                     display: block;
-                                    padding-left: 15px;
-                                    padding-top: 7px;
-                                    font-size: 23px;
+                                    padding-top: 15px;
+                                    font-size: 20px;
                                     cursor: pointer;
                                 }
         
@@ -501,11 +494,12 @@
                             .control-item
                             {
                                 border: none;
-                                padding: 0 15px;
-                                font-size: 15px;
+                                font-size: 17px;
+                                padding: 0 13px;
+                                margin-top: 0px;
                                 &:last-child
                                 {
-                                
+                                padding-right: 0;
                                 }
                             }
                         }
@@ -520,7 +514,6 @@
                 {
                     .banner-inner
                     {
-                        padding-left: 15px;
                         .introduce-inner
                         {
                             z-index: 3;
@@ -565,12 +558,10 @@
         {
             position: relative;
             top: 15px;
-            margin: 0 15px;
             .container
             {
                     .strength-inner
                 {
-
                     .strength-col
                     {   
                         width: 100%;
@@ -578,8 +569,7 @@
                         .strength-item
                         {
                         width: 50%;
-                        height: 250px;
-                            
+                        height: 250px;  
                         }
                         .content
                         {
@@ -629,7 +619,6 @@
                     justify-content: center;
                     &-child
                     {
-                        border-bottom: none;
                         border-bottom: 1px solid #948989;
                     }
                     .line
@@ -703,12 +692,9 @@
             margin-top: 40px;
             .comment-inner
             {
-                
                 .comment-title
                 {
-                    
                     font-size: 24px;
-                
                 }
                 .comment-avatar
                 {   
@@ -811,9 +797,7 @@
                                 font-size: 12px;
                                 font-weight: 500;
                                 font-family: 'Poppins';
-
                             }
-                            
                             .footer-list
                             {  
                                 display: none;
@@ -826,7 +810,6 @@
                                     a{
                                        display: inline-block;
                                        text-align: center;
-                                        
                                     }
                                 }
                             }
@@ -834,14 +817,10 @@
                             {
                                 display: block;
                             }
-
-                        
-                            
                         }
                     }
                     
                 }
-
             }   
             #l
             {
@@ -1237,10 +1216,11 @@
                             {
                                 .nav-icon
                                 {
-                                   font-size: 20px;
+                                   font-size: 17px;
                                 }
                                 .menu{
                                     
+                                    top:85px;
                                     &-item
                                     {
                                        
@@ -1262,13 +1242,10 @@
                             
                             .control-item
                             {   
-                                margin: 0;
-                                margin-left: 10px;
-                                padding: 0;
-                                border: none;
+                                margin-top: 0;
                                     i
                                     {
-                                        margin: 5px 5px;
+                                        font-size: 15px;
                                     }
                                 &:last-child
                                 {
