--- a/less/base/_header.less
+++ b/less/base/_header.less
@@ -313,6 +313,8 @@
                                 border: 1px solid gainsboro;
                                 border-top-left-radius: 7px;
                                 border-bottom-right-radius: 7px;
+                                background-color: white;
+
                                
                             }
                             &:hover
@@ -321,10 +323,9 @@
                                 i{
                                     color: #fff;
                                     display: block;
-                                    border-top-left-radius: 7px;
-                                    border-bottom-right-radius: 7px;
                                     background-color: #dd2f31;
                                     cursor: pointer;
+                                    border-color:  #dd2f31;
                                 }
                             }
                         }
